src/objects/CEC_Case_Market_Mapping__c.object
<CustomObject>
    <description>CEC: Contains locale to market mapping. Integration team will be using this data to pre populate the data in case of webtoCase scenario</description>
    <fields>
        <fullName>Account_Owner_Active_Flag__c</fullName>
        <formula>DefaultAccountOwnerId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Active Flag</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Brand_Ambassador_Brands__c</fullName>
        <description>CEC Brand Ambassador Brands is used to enter the status for advisor</description>
        <label>Brand Ambassador Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC Business Hours: Lookup to Business Hours</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Case Market Mappings</relationshipLabel>
        <relationshipName>Case_Market_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Consumer_Phone_Search_Digits__c</fullName>
        <description>CEC: For SMS Cases Search will be performed on the last N digitis</description>
        <label>Consumer Phone Search Digits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Delay__c</fullName>
        <description>CEC: No of days the case closure the CSAT survey can be sent</description>
        <label>CSAT Delay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Email_Percentage__c</fullName>
        <description>CEC: CSAT percentage for email channel</description>
        <label>CSAT Email Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSAT_Phone_Percentage__c</fullName>
        <description>CEC: CSAT percentage for phone channel</description>
        <label>CSAT Phone Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSAT_Social_Percentage__c</fullName>
        <description>CEC: CSAT percentage for social chanel</description>
        <label>CSAT Social Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>CSAT_Survey_Id__c</fullName>
        <label>CSAT Survey Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Web_Percentage__c</fullName>
        <description>CEC: CSAT percentage for web channel</description>
        <label>CSAT Web Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>CaseOrigin</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Decimals__c</fullName>
        <label>Cheque Decimals</label>
        <picklist>
            <picklistValues>
                <fullName>Display as text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Display as fraction</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <description>CEC: To capture the company address of the company.Used in retrieval report</description>
        <label>Company Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <description>CEC: To capture the company phone number</description>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC: contains the country value which will be used in webtocase scenario by integration team</description>
        <label>Country</label>
        <referenceTo>mdm_Geography__c</referenceTo>
        <relationshipLabel>Case Market Mappings</relationshipLabel>
        <relationshipName>Case_Market_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultAccountOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC: Contains the default Account owner Id which will be used when cases are getting created through email or web</description>
        <label>DefaultAccountOwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Market_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultCaseOwnerId__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultCaseOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_From_Address__c</fullName>
        <description>CEC Default_From_Address  filed will have a default value for &apos;From address&apos; while sending email.</description>
        <label>Default From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Skill_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC Enable Skill Routing</description>
        <label>Enable Skill Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>CEC: contains the Language Name which will be used in webtocase scenario by integration team</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flemish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
			<picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moldavian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>CEC: contains the Key value which will be used in webtocase scenario by integration team</description>
        <externalId>true</externalId>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>CEC: contains the Market Name which will be used in webtocase scenario by integration team</description>
        <label>Market</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Factory_Email_Template__c</fullName>
        <description>Contains the email template name for product factory of the country</description>
        <inlineHelpText>Enter Developer name of the email template. Developer Name doesn&apos;t contain spaces</inlineHelpText>
        <label>Product Factory Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>TO: Picklist to differentiate between CEC and George Case Market Mapping</description>
        <label>Tag</label>
        <picklist>
            <picklistValues>
                <fullName>CEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>George</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Textile_Factory_Email_Template__c</fullName>
        <description>Contains textile factory email template for the country</description>
        <inlineHelpText>Enter Developer name of the email template. Developer Name doesn&apos;t contain spaces</inlineHelpText>
        <label>Textile Factory Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>TimeZone_Difference_GMT__c</fullName>
        <inlineHelpText>If time zone is GMT+5.30 then enter 5.50
else if GMT-7 then enter -7
else if GMT+13.45 then enter 13.75
esle if GMT-9.30 then enter -9.50</inlineHelpText>
        <label>TimeZone Difference GMT</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Market Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Locale__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account_Owner_Active_Flag__c</columns>
        <columns>DefaultAccountOwnerId__c</columns>
        <columns>DefaultCaseOwnerId__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>Tag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CEC_Baltics_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Baltics Queue</label>
        <queue>CEC_Baltics_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Benelux_Queue_CEC_Case_Market_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Locale__c</columns>
        <columns>Market__c</columns>
        <columns>Account_Owner_Active_Flag__c</columns>
        <columns>DefaultAccountOwnerId__c</columns>
        <columns>DefaultCaseOwnerId__c</columns>
        <filterScope>Queue</filterScope>
        <label>CEC Benelux Queue</label>
        <language>en_US</language>
        <queue>CEC_Benelux_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Brazil_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Brazil Queue</label>
        <queue>CEC_Brazil_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Cyprus_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Cyprus Queue</label>
        <queue>CEC_Cyprus_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Czech_Republic_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Czech Republic Queue</label>
        <queue>CEC_Czech_Republic_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_DACH_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC DACH Queue</label>
        <queue>CEC_DACH_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_France_Queue_CEC_Case_Market_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Locale__c</columns>
        <columns>Market__c</columns>
        <columns>Account_Owner_Active_Flag__c</columns>
        <columns>DefaultAccountOwnerId__c</columns>
        <columns>DefaultCaseOwnerId__c</columns>
        <filterScope>Queue</filterScope>
        <label>CEC France Queue</label>
        <language>en_US</language>
        <queue>CEC_France_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_General_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC UKI Queue</label>
        <queue>CEC_General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Greece_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Greece Queue</label>
        <queue>CEC_Greece_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Hungary_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Hungary Queue</label>
        <queue>CEC_Hungary_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_India_Tier_1_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC India Tier 1</label>
        <queue>CEC_India_Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Italy_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Italy Queue</label>
        <queue>CEC_Italy_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Middle_Americas_Queue_CEC_Case_Market_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Middle Americas Queue</label>
        <queue>CEC_Middle_Americas_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Nordic_Queue_CEC_Case_Market_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Locale__c</columns>
        <columns>Market__c</columns>
        <columns>Account_Owner_Active_Flag__c</columns>
        <columns>DefaultAccountOwnerId__c</columns>
        <columns>DefaultCaseOwnerId__c</columns>
        <filterScope>Queue</filterScope>
        <label>CEC Nordic Queue</label>
        <language>en_US</language>
        <queue>CEC_Nordic_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case Market Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Market Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>